--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p>
                 Indonesia, tanah air kita tercinta, adalah kanvas penuh warna tempat keberagaman berkilauan bak pelangi setelah hujan. Di sini, suku-suku bersatu seperti burung merajut sarang di pohon yang sama, menciptakan harmoni dalam perbedaan. Budaya Indonesia mengalir seperti sungai yang menyatukan setiap jengkal tanah dengan tenangnya, sementara masyarakatnya bekerja sama seperti semut yang tak kenal lelah. Dari Sabang hingga Merauke, pulau-pulau kita adalah mutiara yang bersinar di lautan, masing-masing memiliki kilau unik namun semuanya memperindah Nusantara. Keberagaman ini adalah kekuatan, seperti gunung yang kokoh menghadapi tantangan, dan bagaikan benang-benang berbeda warna yang membentuk kain tenun indah, keberagaman menjadikan Indonesia satu, kaya akan jiwa dan budaya.
             </p>
-            <button type="button" class="btn btn-outline-light" id="btn1">Lihat keberagaman Indonesia <i class="fa-solid fa-people-line" style="color: #ffffff;"  id="icon1"></i></button>
+            <button type="button" class="btn btn-outline-light" id="btn1"><a href="https://id.wikipedia.org/wiki/Budaya_Indonesia">Lihat keberagaman Indonesia</a> <i class="fa-solid fa-people-line" style="color: #ffffff;"  id="icon1"></i></button>
         </div>
         <div class="image">
             <img src="assets/garudaputih.png" alt="" data-aos="fade-zoom-in"
